--- a/tutorial/stim_transformations_tutorial.ipynb
+++ b/tutorial/stim_transformations_tutorial.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d2b10208",
    "metadata": {},
    "outputs": [
@@ -52,8 +52,8 @@
    ],
    "source": [
     "# Input reference and test images into the main function\n",
-    "out_img0 = stf.setup(img_test0, operation='center', img_ref = img_ref)\n",
-    "out_img1 = stf.setup(img_test1, operation='center', img_ref = img_ref)\n",
+    "out_img0 = stf.transform_image(img_test0, operation='center', img_ref = img_ref)\n",
+    "out_img1 = stf.transform_image(img_test1, operation='center', img_ref = img_ref)\n",
     "\n",
     "# Visualize the results\n",
     "plt.figure(figsize=(10, 5))\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "227f74a8",
    "metadata": {},
    "outputs": [
@@ -109,8 +109,8 @@
     }
    ],
    "source": [
-    "out_img0 = stf.setup(img_test0, operation='scale', img_ref = img_ref)\n",
-    "out_img1 = stf.setup(img_test1, operation='scale', img_ref = img_ref)\n",
+    "out_img0 = stf.transform_image(img_test0, operation='scale', img_ref = img_ref)\n",
+    "out_img1 = stf.transform_image(img_test1, operation='scale', img_ref = img_ref)\n",
     "\n",
     "# Visualize the results\n",
     "plt.figure(figsize=(10, 5))\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2055b71c",
    "metadata": {},
    "outputs": [
@@ -229,8 +229,8 @@
    ],
    "source": [
     "# Currently outputting two images for texture, one full and one cropped\n",
-    "out_img_camel = stf.setup(img_ref, operation='texture')\n",
-    "out_img_wrench = stf.setup(img_test1, operation='texture')\n",
+    "out_img_camel = stf.transform_image(img_ref, operation='texture')\n",
+    "out_img_wrench = stf.transform_image(img_test1, operation='texture')\n",
     "\n",
     "# Visualize the results\n",
     "plt.figure(figsize=(8, 4))\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a4fcc512",
    "metadata": {},
    "outputs": [
@@ -340,8 +340,8 @@
    ],
    "source": [
     "# Creating bounding box for image based on largest h/w dimension then resizing to 256x256\n",
-    "camel_crop, texture_camel = stf.setup(img_ref, operation='texture_crop')\n",
-    "wrench_crop, texture_wrench = stf.setup(img_test1, operation='texture_crop')\n",
+    "camel_crop, texture_camel = stf.transform_image(img_ref, operation='texture_crop')\n",
+    "wrench_crop, texture_wrench = stf.transform_image(img_test1, operation='texture_crop')\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.subplot(1, 3, 1)\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8257b7a6",
    "metadata": {},
    "outputs": [
@@ -396,8 +396,8 @@
     }
    ],
    "source": [
-    "binary, out_img = stf.setup(img_ref, operation='skeleton')\n",
-    "binary1, out_img1 = stf.setup(img_test1, operation='skeleton')\n",
+    "binary, out_img = stf.transform_image(img_ref, operation='skeleton')\n",
+    "binary1, out_img1 = stf.transform_image(img_test1, operation='skeleton')\n",
     "\n",
     "# Visualize the results\n",
     "plt.figure(figsize=(8, 4))\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "99128b85",
    "metadata": {},
    "outputs": [
@@ -443,39 +443,7 @@
     }
    ],
    "source": [
-    "features = stf.setup(img_ref, operation='NN', network='resnet50', layer_types=['Conv2d', 'Linear'], device='auto')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "812d71e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# img_path = '/mnt/DataDrive3/emeyer/TreeShrewObjRec/rawStims/Camel_Rhino_test_nn/'\n",
-    "\n",
-    "# for i in range(0,201):\n",
-    "#     input_img = cv2.imread(img_path +f'original/camel_{i}.png', cv2.IMREAD_GRAYSCALE)\n",
-    "#     img_binary, out_img = stf.setup(input_img, _, 'skeleton')\n",
-    "\n",
-    "#     plt.imsave(img_path +f'skeletonStims_inverse/camel_{i}.png', out_img, cmap='gray', vmin = 0, vmax = 255)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87bbb53c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# img_path = '/mnt/DataDrive3/emeyer/TreeShrewObjRec/rawStims/Camel_v2_test_nn/'\n",
-    "\n",
-    "# for i in range(0,201):\n",
-    "#     input_img = cv2.imread(img_path +f'saliconKroner/wrench_{i}.jpeg', cv2.IMREAD_GRAYSCALE)\n",
-    "#     inv_img = 255 - input_img\n",
-    "\n",
-    "#     plt.imsave(img_path +f'saliconKroner_inverse/wrench_{i}.png', inv_img, cmap='gray', vmin = 0, vmax = 255)"
+    "features = stf.transform_image(img_ref, operation='NN', network='resnet50', layer_types=['Conv2d', 'Linear'], device='auto')"
    ]
   }
  ],
