added additional installation options

--- a/tutorial/stim_transformations_tutorial.ipynb
+++ b/tutorial/stim_transformations_tutorial.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c7e136c9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fix for common Windows compatibility issues\n",
+    "import os\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'TRUE'\n",
+    "\n",
     "# Load in reference and test images\n",
     "import stim_transformations as stf\n",
     "import matplotlib.pyplot as plt\n",
@@ -229,8 +233,8 @@
    ],
    "source": [
     "# Currently outputting two images for texture, one full and one cropped\n",
-    "out_img_camel = stf.transform_image(img_ref, operation='texture')\n",
-    "out_img_wrench = stf.transform_image(img_test1, operation='texture')\n",
+    "out_img_camel = stf.transform_image(img_ref, operation='texture_inplace')\n",
+    "out_img_wrench = stf.transform_image(img_test1, operation='texture_inplace')\n",
     "\n",
     "# Visualize the results\n",
     "plt.figure(figsize=(8, 4))\n",
