--- a/tutorial/stim_transformations_tutorial.ipynb
+++ b/tutorial/stim_transformations_tutorial.ipynb
@@ -7,11 +7,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\eemeyer\\Anaconda3\\lib\\site-packages\\torchvision\\io\\image.py:13: UserWarning: Failed to load image Python extension: [WinError 127] The specified procedure could not be found\n",
-      "  warn(f\"Failed to load image Python extension: {e}\")\n"
+      "Inserted /mnt/DataDrive3/emeyer/labcode/StimulusModeling into sys.path\n"
      ]
     }
    ],
@@ -20,7 +19,19 @@
     "import os\n",
     "os.environ['KMP_DUPLICATE_LIB_OK'] = 'TRUE'\n",
     "\n",
-    "# Load in reference and test images\n",
+    "# Debugging import issues: show interpreter, cwd, sys.path, and locate module file\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# The module lives one level up from this notebook; add that parent explicitly\n",
+    "module_parent = str(Path.cwd().parent)\n",
+    "if module_parent not in sys.path:\n",
+    "    sys.path.insert(0, module_parent)\n",
+    "    print('Inserted', module_parent, 'into sys.path')\n",
+    "else:\n",
+    "    print('Parent already on sys.path:', module_parent)\n",
+    "\n",
+    "# Now import the module (will import from path printed above)\n",
     "import stim_transformations as stf\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d2b10208",
    "metadata": {},
    "outputs": [
@@ -440,27 +451,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "99128b85",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Unsupported network: alexnet_mouse",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m features \u001b[38;5;241m=\u001b[39m \u001b[43mstf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_ref\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mNN\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnetwork\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43malexnet_mouse\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayer_types\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mConv2d\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mLinear\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mauto\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Documents\\arcaro_lab\\StimulusModeling-main\\stim_transformations.py:129\u001b[0m, in \u001b[0;36mtransform_image\u001b[1;34m(img_test, operation, **kwargs)\u001b[0m\n\u001b[0;32m    126\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m skeletonize_object(img_test, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m operation \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNN\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 129\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m NN_activation(img_test, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    131\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    132\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnknown operation: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moperation\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\Documents\\arcaro_lab\\StimulusModeling-main\\stim_transformations.py:613\u001b[0m, in \u001b[0;36mNN_activation\u001b[1;34m(img_test, network, layer_types, device)\u001b[0m\n\u001b[0;32m    611\u001b[0m     net \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39mresnet18(pretrained\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    612\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 613\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnsupported network: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnetwork\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    615\u001b[0m \u001b[38;5;66;03m# Move the network to the selected device so its weights and buffers\u001b[39;00m\n\u001b[0;32m    616\u001b[0m \u001b[38;5;66;03m# have the same device type as the input tensor we will send through it.\u001b[39;00m\n\u001b[0;32m    617\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m device \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
-      "\u001b[1;31mValueError\u001b[0m: Unsupported network: alexnet_mouse"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading alexnet_bn_ir_64x64_input_pool_6. Pretrained: True. Model Family: imagenet.\n",
+      "Loaded parameters from ../mouse_vision/model_ckpts/alexnet_bn_ir.pt\n"
      ]
     }
    ],
    "source": [
     "features = stf.transform_image(img_ref, operation='NN', network='alexnet_mouse', layer_types=['Conv2d', 'Linear'], device='auto')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f704bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -479,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
